# anki

./: .gitignore  :memory:  CONTRIBUTORS  Cargo.toml  README.md  greatlas.db  justfile
.github/workflows/: ci.yml
docs/: brainlift-architecture.md  brainlift-mobile.md  brainlift-product-architecture.md  brainlift-release.md  brainlift-topic-mastery-rust-note.md  development.md  gre-atlas-architecture.md  gre-atlas-mobile.md  gre-atlas-product-architecture.md  gre-atlas-release.md  gre-atlas-topic-mastery-rust-note.md
docs/gre-atlas-submission/: AI.md  ARCHITECTURE.md  ARTIFACT-AUDIT-2026-07-05.md  BUILD.md  DEMO-CHECKLIST.md  EVALUATION.md  FEATURE-INDEX.md  FRIDAY-DELIVERABLES.md  GRADING-CHECKLIST.md  INSTALL.md  MODEL-INPUT-SYNC-AUDIT.md  PATH-AUDIT.md  PERFORMANCE-MODEL.md  README.md  RECORDINGS.md  RELEASE-CHECKLIST.md  SCREENSHOTS.md  SUBMISSION-CHECKLIST.md  SUBMISSION.md  SYNC-DEV-SETUP.md  SYNC-VERIFICATION.md  WEDNESDAY-PHONE-REVIEW.md  artifacts.md  release.md  tests.md  wednesday-release-proof.md  wednesday-test-output.txt
docs/models/: memory-model.md  performance-model.md  readiness-model.md
mobile/ios/: .gitignore  DEMO.md  README.md
mobile/mobile_bridge/: Cargo.toml  build.rs
mobile/mobile_bridge/include/: anki_mobile.h
mobile/mobile_bridge/src/: backend_method.rs  demo_pages.rs  gre_pages.rs  ios_demo_bundle.rs  lib.rs  parity.rs  study_pages.rs  sync_pages.rs
proto/anki/: brainlift.proto  stats.proto
pylib/anki/: brainlift.py  collection.py  gre_atlas.py
rslib/: build.rs
tools/: generate_gre_foundation_bank.py
ts/: vite.config.ts
(+372 files in other folders)
