[package]
name = "mobile_bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "C FFI bridge to Anki's Rust backend for iOS/Android companions"

[lib]
name = "mobile_bridge"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
anki = { workspace = true, features = ["rustls"] }

[dev-dependencies]
tempfile.workspace = true
anki_proto.workspace = true
anki_proto_gen.workspace = true
prost-reflect.workspace = true
prost.workspace = true
